# x86_android_AI

./: README.md
interactive_face_demo/: import-summary.txt
interactive_face_demo/app/: CMakeLists - Copy.txt  CMakeLists.txt  build.gradle
interactive_face_demo/app/src/androidTest/java/com/example/interactive_face_demo/: ExampleInstrumentedTest.java
interactive_face_demo/app/src/main/: AndroidManifest.xml
interactive_face_demo/app/src/main/cpp/dldt_plugin/: CMakeLists - Copy.txt  CMakeLists.txt
interactive_face_demo/app/src/main/cpp/dldt_plugin/include/: common.hpp  detectors.hpp  load_dldt.hpp  ocv_common.hpp
interactive_face_demo/app/src/main/cpp/dldt_plugin/src/: backup-load_dldt.cpp  detectors.cpp  load_dldt.cpp  main.cpp
interactive_face_demo/app/src/main/cpp/include/inference_engine/details/: ie_exception_conversion.hpp
interactive_face_demo/app/src/main/cpp/jni/: nn_hal_ext_jni.h  nnhal_ext.cpp
interactive_face_demo/app/src/main/java/com/example/interactive_face_demo/: CustomCameraView.java  FaceDetection.java  MainActivity.java  detector.java  util.java
interactive_face_demo/app/src/main/res/layout/: activity_main.xml  image_activity_main.xml
interactive_face_demo/app/src/main/res/values/: strings.xml
interactive_face_demo/app/src/test/java/com/example/interactive_face_demo/: ExampleUnitTest.java
interactive_face_demo/gradle/wrapper/: gradle-wrapper.properties
